{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 471,
  "lineage": "13c479f0-a4c5-c48b-c6b6-c349d7dac15b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myproject",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08802ddc5c8ec9283",
            "arn": "arn:aws:ec2:ap-east-1:779255550655:instance/i-0d83b164e663356be",
            "associate_public_ip_address": true,
            "availability_zone": "ap-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d83b164e663356be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00fc60dcdd7c4fec8",
            "private_dns": "ip-172-31-2-11.ap-east-1.compute.internal",
            "private_ip": "172.31.2.11",
            "public_dns": "ec2-18-162-112-237.ap-east-1.compute.amazonaws.com",
            "public_ip": "18.162.112.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b24bc2ab21e136cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02f0e3cd5b44d3939",
            "tags": {
              "Name": "For_Aws_Terraform"
            },
            "tags_all": {
              "Name": "For_Aws_Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042c8925ddc66c5c6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-0dfb36b7acb95f4d8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0dfb36b7acb95f4d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022041907224116460000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-07dddef8e5530f3da",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07dddef8e5530f3da",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20220419072238349700000009",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-013c9aa2801b6f5dc",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-013c9aa2801b6f5dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022041907224123370000000b",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-0cb2aa0a26b1630d1",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0cb2aa0a26b1630d1",
            "ingress": [],
            "name": "education-eks-VPmj46ae2022041907224139120000000d",
            "name_prefix": "education-eks-VPmj46ae",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-VPmj46ae-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "education-eks-VPmj46ae-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:security-group/sg-025448f838f821e54",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-025448f838f821e54",
            "ingress": [],
            "name": "education-eks-VPmj46ae2022041907224136870000000c",
            "name_prefix": "education-eks-VPmj46ae",
            "owner_id": "779255550655",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "education-eks-VPmj46ae-eks_worker_sg",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "owned"
            },
            "tags_all": {
              "Name": "education-eks-VPmj46ae-eks_worker_sg",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-3440595140",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0cb2aa0a26b1630d1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-1476916761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0cb2aa0a26b1630d1",
            "self": false,
            "source_security_group_id": "sg-025448f838f821e54",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2793730330",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-025448f838f821e54",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-1096084300",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025448f838f821e54",
            "self": false,
            "source_security_group_id": "sg-0cb2aa0a26b1630d1",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-4046752398",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025448f838f821e54",
            "self": false,
            "source_security_group_id": "sg-0cb2aa0a26b1630d1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-1222526610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-025448f838f821e54",
            "self": false,
            "source_security_group_id": "sg-025448f838f821e54",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be28cec7bd615e3",
            "domain": "vpc",
            "id": "eipalloc-09be28cec7bd615e3",
            "network_border_group": "ap-east-1",
            "public_dns": "ec2-18-166-155-91.ap-east-1.compute.amazonaws.com",
            "public_ip": "18.166.155.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "tags_all": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:internet-gateway/igw-0eb631d8fc782d31d",
            "id": "igw-0eb631d8fc782d31d",
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "tags_all": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09be28cec7bd615e3",
            "connectivity_type": "public",
            "id": "nat-0c46224403c1223ce",
            "network_interface_id": "eni-0083562f501bc550c",
            "private_ip": "10.0.4.191",
            "public_ip": "18.166.155.91",
            "subnet_id": "subnet-0cb57dd89744b6b82",
            "tags": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "tags_all": {
              "Name": "education-eks-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09b594d9dcb1d36b51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c46224403c1223ce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b594d9dcb1d36b5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb631d8fc782d31d",
            "id": "r-rtb-07d0cee724ac8858a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d0cee724ac8858a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:route-table/rtb-09b594d9dcb1d36b5",
            "id": "rtb-09b594d9dcb1d36b5",
            "owner_id": "779255550655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-eks-private",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "tags_all": {
              "Name": "education-eks-private",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:route-table/rtb-07d0cee724ac8858a",
            "id": "rtb-07d0cee724ac8858a",
            "owner_id": "779255550655",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "education-eks-public",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "tags_all": {
              "Name": "education-eks-public",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b09786e924159197"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4eeffb3a3ae7fd5",
            "route_table_id": "rtb-09b594d9dcb1d36b5",
            "subnet_id": "subnet-04a8f55943b6ae581"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0294deb33551e99b9",
            "route_table_id": "rtb-09b594d9dcb1d36b5",
            "subnet_id": "subnet-014abf10c13a7fbb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007872f09535a5f93",
            "route_table_id": "rtb-09b594d9dcb1d36b5",
            "subnet_id": "subnet-0949293aa74362f0c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad9000f93c60f6a5",
            "route_table_id": "rtb-07d0cee724ac8858a",
            "subnet_id": "subnet-0cb57dd89744b6b82"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d948b0aa7d4a637c",
            "route_table_id": "rtb-07d0cee724ac8858a",
            "subnet_id": "subnet-0d773053486012a5a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07858ad636bf5b15f",
            "route_table_id": "rtb-07d0cee724ac8858a",
            "subnet_id": "subnet-095615e8940c4938c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-04a8f55943b6ae581",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04a8f55943b6ae581",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-private-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-private-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-014abf10c13a7fbb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-014abf10c13a7fbb7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-private-ap-east-1b",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-private-ap-east-1b",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-0949293aa74362f0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1c",
            "availability_zone_id": "ape1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0949293aa74362f0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-private-ap-east-1c",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-private-ap-east-1c",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-0cb57dd89744b6b82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1a",
            "availability_zone_id": "ape1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0cb57dd89744b6b82",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-public-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-public-ap-east-1a",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-0d773053486012a5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1b",
            "availability_zone_id": "ape1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d773053486012a5a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-public-ap-east-1b",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-public-ap-east-1b",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:subnet/subnet-095615e8940c4938c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-east-1c",
            "availability_zone_id": "ape1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-095615e8940c4938c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks-public-ap-east-1c",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "education-eks-public-ap-east-1c",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b09786e924159197"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-east-1:779255550655:vpc/vpc-0b09786e924159197",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be45dad0c8903aa8",
            "default_route_table_id": "rtb-096a391a758302bc2",
            "default_security_group_id": "sg-0ed4355c09e6e6cfc",
            "dhcp_options_id": "dopt-06c853d9c50852b51",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b09786e924159197",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-096a391a758302bc2",
            "owner_id": "779255550655",
            "tags": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            },
            "tags_all": {
              "Name": "education-eks",
              "kubernetes.io/cluster/education-eks-VPmj46ae": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}